--- a/src/Resources/styles/styles.css
+++ b/src/Resources/styles/styles.css
@@ -160,5 +160,25 @@ template {
 html, body {
     width: 100%;
     height: 100%;
-    background-color: #808080;
+    background-color: #F5F5F5;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont,
+    "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+    "Helvetica Neue", sans-serif;
+    color: #2B2B2B;
+}
+
+.handler {
+    padding: 1px;
+    box-sizing: border-box;
+    margin: 0 1rem;
+    min-height: 100%
+}
+
+.handler__block {
+    background-color: #fff;
+    padding: 1rem;
+    box-sizing: border-box;
+    margin: 1rem 0 0;
+    border-radius: 5px;
+    box-shadow: 0 3px 6px rgb(0 0 0 / 3%), 0 3px 6px rgb(0 0 0 / 8%)
 }
