--- a/src/Resources/styles/styles.css
+++ b/src/Resources/styles/styles.css
@@ -193,6 +193,7 @@ html, body {
 .handler__message {
     margin: 1rem;
     font-weight: 400;
-    font-size: 1.2rem;
+    font-size: 1rem;
     letter-spacing: 0.03rem;
+    line-height: 1.6rem;
 }
