--- a/src/Resources/styles/styles.css
+++ b/src/Resources/styles/styles.css
@@ -287,6 +287,7 @@ html, body {
 }
 
 .handler__trace-code-line-error {
+    background-color: #5f0202 !important;
 }
 
 .handler__trace-code-line-number {
