--- a/src/Resources/styles/styles.css
+++ b/src/Resources/styles/styles.css
@@ -207,15 +207,33 @@ html, body {
 }
 
 .handler__previous {
-    margin: 0;
+    margin: 1rem;
+    border-left: 2px solid #d3371e;
+    box-sizing: border-box;
+    padding: 0 0 0 1rem;
+    position: relative;
+}
+
+.handler__previous:before {
+    content: '';
+    display: block;
+    width: 1rem;
+    height: 1rem;
+    position: absolute;
+    top: 0;
+    left: -0.5rem;
+    transform: rotate(45deg);
 }
 
 .handler__previous-title {
-    margin: 0;
+    margin: 0.5rem 0;
+    font-size: 1.2rem;
+    color: #d3371e;
 }
 
 .handler__previous-message {
     margin: 0;
+    font-size: 0.9rem;
 }
 
 .handler__trace {
